sdm845-common: overlay: Enable Adaptive Sleep
* This allows the use of Screen Attention

Signed-off-by: AnierinB <anierin@evolution-x.org>

--- a/overlay-evolution/frameworks/base/core/res/res/values/evolution_config.xml
+++ b/overlay-evolution/frameworks/base/core/res/res/values/evolution_config.xml
@@ -56,4 +56,7 @@
     <string name="config_adaptiveChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
     <string name="config_adaptiveChargingSuspendValue" translatable="false">1</string>
     <string name="config_adaptiveChargingResumeValue" translatable="false">0</string>
- </resources>
+
+    <!-- Flag indicating whether we should enable the adaptive sleep.-->
+    <bool name="config_adaptive_sleep_available">true</bool>
+</resources>
